Fix intro-wrap margin+add object-fit

--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -78,6 +78,7 @@ section {
     background-image: url('welders.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    object-fit: cover;
     background-position: left;
     filter: brightness(50%);
   }
